--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = 'art vandel'"
+   ]
   },
   {
    "cell_type": "code",
