--- a/index.ipynb
+++ b/index.ipynb
@@ -169,11 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'art vandel'"
+    "name = 'art vandelay'"
    ]
   },
   {
