--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "title = C"
+   ]
   },
   {
    "cell_type": "markdown",
