Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = 'art.'"
+    "email = 'art.vandelay@vandelay.co'"
    ]
   },
   {
