Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -314,7 +314,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if emai"
+   ]
   },
   {
    "cell_type": "markdown",
