Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,20 +311,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-cbb818b70434>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-cbb818b70434>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    email endswith('.com')\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "email endswith('.com')"
+    "email.endswith('.com')"
    ]
   },
   {
