Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "website = 'vandelay.com'\n"
+    "website = 'vandelay.com'\n",
+    "www."
    ]
   },
   {
