Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,7 @@
    "outputs": [],
    "source": [
     "website = 'vandelay.com'\n",
-    "website = www.+"
+    "website = 'www.'+website"
    ]
   },
   {
