Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -360,12 +360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "website = 'vandelay.com'\n",
-    "website = 'www.'+website"
+    "website = 'www.'+website\n",
+    "website"
    ]
   },
   {
