Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -402,7 +402,8 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 728"
+    "\"7285553334\" # 728\n",
+    "phone = "
    ]
   },
   {
